Fixed Overflow on X, Also a lot of small ajustments on Visual

--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -1,7 +1,7 @@
 .title{
   font-family: 'Righteous';
   font-size: 1.3rem;
-  margin-top: 1.2rem;
+  margin-top: 1.7rem;
   
   color: #374650;
 }
