--- a/src/global.css
+++ b/src/global.css
@@ -1,11 +1,10 @@
 body {
-  box-sizing: border-box;
-  
-  display: flex;
-  min-width: 100vw;
-  min-height: 100vh;
   background-color: #EBEBEB;
-  margin: 0;
+
+  max-width: 100vw !important;
+  min-height: 100vh;
+  margin: 0px;
+  padding: 0px;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
