--- a/src/pages/example/example.css
+++ b/src/pages/example/example.css
@@ -1,14 +1,19 @@
 #bg{
   display: flex;
-  min-width: 100vw;
-  min-height: 100vh;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  position: static;
+  max-width: 100vw;
+  display: flex;
+
+  padding-bottom: 4.5rem;
 }
 
 #project-name{
   font-family: 'Lobster';
   color: white;
-  font-size: 1.7rem;
+  font-size: 2rem;
 
   position: absolute;
   left: 1rem;
@@ -18,7 +23,9 @@
 #top-bg{
   position: absolute;
   z-index: -2;
-  width: 100vw;
+  left: 0;
+  top: 0;
+  width: 100%;
 
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -28,79 +35,11 @@
 #page{
   display: flex;
   flex-direction: column;
-  
-  margin-top: 10rem;
+
   width: 80vw;
   max-width: 60rem;
   
   padding: 0.9rem;
   
   background-color: white;
-}
-
-#title{
-  font-family: 'Righteous', cursive;
-  font-size: 35px;
-  color: #374650;
-}
-
-.divider{
-  margin-top: 12px !important;
-}
-
-#config-row{
-  margin-top: 1rem;
-  display: flex;
-  flex-direction: row;
-}
-
-#config{
-  cursor: pointer;
-  width: 80%;
-  height: 3rem;
-  background-color: #008CFF;
-  border-radius: 0.5rem;
-  margin-right: 0.7rem;
-}
-
-.config-side{
-  cursor: pointer;
-  margin: 0 0.7rem;
-  width: 8%;
-  height: 3rem;
-  background-color: #008CFF;
-  border-radius: 0.5rem;
-
-  /* For Mobile */
-  min-width: 3.5rem;
-}
-
-#feedback-col{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-  
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 9rem;
-
-  max-width: 60rem;
-  margin-left: .48rem;
-  padding: 0.9rem;
-  
-  width: 80vw;
-  height: 50px;
-
-  background-color: #017FE6;
-  color: white;
-}
-
-#solutions-t{}
-
-#feedback-space{
-  margin-top: 20px;
-  padding: 2rem;
-  height: 50px;
-  margin-bottom: -2rem;
 }
